user profile, edit info, upload image

--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -1,11 +1,12 @@
 .register-page {
   text-align: center;
+  padding: 30px;
 }
 
 #controls {
   display: block;
   margin: 0 auto;
-  width: 30%;
+  width: 50%;
 }
 
 mat-form-field {
