--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,13 +1,14 @@
 .login-page {
   text-align: center;
+  padding: 30px;
 }
 
 #controls {
   display: block;
   margin: 0 auto;
-  width: 30%;
+  width: 50%;
 }
 
 mat-form-field {
-  width: 20%;
+  width: 35%;
 }
