--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,8 @@
 <div class="login-page">
   <h2>Login</h2>
 
+  <p>Doesn't have an account?  <a routerLink="/register">Sign up</a></p>
+
   <form [formGroup]="loginForm">
     <div>
       <div class="justify-content-center">
@@ -19,11 +21,9 @@
       </div>
 
       <div id="controls" class="row">
-        <button style="width: 20%" [disabled]="loginForm.invalid" (click)="submit()" mat-flat-button color="primary">
+        <button style="width: 30%;" [disabled]="loginForm.invalid" (click)="submit()" mat-flat-button color="primary">
           Login
         </button>
-
-        <a routerLink="/register">Register</a>
       </div>
     </div>
 
