--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,6 +1,8 @@
 <div class="register-page">
   <h2>Register</h2>
 
+  <p>Already have an account?  <a routerLink="/login">Sign in</a></p>
+
   <form [formGroup]="registerForm">
     <div class="justify-content-center">
       <!--  first name field  -->
@@ -47,11 +49,9 @@
       </div>
 
       <div id="controls" class="row">
-        <button style="width: 20%" [disabled]="registerForm.invalid" (click)="submit()" mat-flat-button color="primary">
+        <button style="width: 30%;" [disabled]="registerForm.invalid" (click)="submit()" mat-flat-button color="primary">
           Register
         </button>
-
-        <a routerLink="/login">Login</a>
       </div>
     </div>
 
