--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -7,14 +7,13 @@
     <mat-icon>login</mat-icon>
   </button>
 
-
   <h3 *ngIf="isDataLoaded">{{this.user.firstName}} {{this.user.lastName}}</h3>
 
   <button *ngIf="isLoggedIn" [matMenuTriggerFor]="menu" matTooltip="Profile" mat-icon-button>
     <mat-icon color="accent">account_box</mat-icon>
   </button>
   <mat-menu id="menu-item" #menu="matMenu">
-    <button mat-menu-item routerLink="/profile">Profile</button>
+    <button mat-menu-item *ngIf="!isAdmin" routerLink="/profile">Profile</button>
     <button (click)="logout()" mat-menu-item>
       Logout
     </button>
