--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -18,18 +18,46 @@
       <button mat-button *ngIf="selectedFile" (click)="onUpload()">Upload</button>
     </div>
     <div class="col" style="text-align: left">
-
-      <h2>{{user.email}}</h2>
-      <h3 style="font-style: italic">{{user.firstName}} {{user.lastName}} {{user.middleName}}</h3>
-      <p>{{user.phoneNumber}}</p>
-      <p>{{user.iin}}</p>
-      <p>{{user.dob}}</p>
+      <h3>Email: <h4>{{user.email}}</h4></h3>
+      <h3>Full name:  <h4>{{user.firstName}} {{user.lastName}} {{user.middleName}}</h4></h3>
+      <h3>Phone number:  <h4>{{user.phoneNumber}}</h4></h3>
+      <h3 *ngIf="user.schoolName != null">School name: <h4>{{user.schoolName }}</h4></h3>
+      <h3 *ngIf="user.schoolCity != null">School city: <h4>{{user.schoolCity}}</h4></h3>
+      <h3 *ngIf="user.schoolState != null">School state: <h4>{{user.schoolState}}</h4></h3>
+      <h3 *ngIf="user.startDate != null">Start date: <h4>{{user.startDate}}</h4></h3>
+      <h3 *ngIf="user.endDate != null">End date: <h4>{{user.endDate}}</h4></h3>
+      <h3 *ngIf="user.iin != null">IIN: <h4>{{user.iin}}</h4></h3>
+      <h3 *ngIf="user.dob != null">Date of birth: <h4>{{user.dob}}</h4></h3>
     </div>
 
     <mat-divider style="margin: 2rem 0"></mat-divider>
 
     <router-outlet></router-outlet>
 
+  </div>
+<!--  <mat-divider style="margin: 2rem 0"></mat-divider>-->
+
+  <div class="row">
+    <div class="col">
+      <h3>Upload attestation file</h3>
+      <input type="file"
+             style="display: none"
+             #fileInput
+             (change)="onFileSelected($event)">
+
+      <button mat-button (click)="fileInput.click()">Choose file</button>
+      <button mat-button *ngIf="selectedFile" (click)="onUpload()">Upload</button>
+    </div>
+    <div class="col">
+      <h3>Upload IIN file</h3>
+      <input type="file"
+             style="display: none"
+             #fileInput
+             (change)="onFileSelected($event)">
+
+      <button mat-button (click)="fileInput.click()">Choose file</button>
+      <button mat-button *ngIf="selectedFile" (click)="onUpload()">Upload</button>
+    </div>
   </div>
 
 </div>
